# ntc

./: Cargo.toml  README.md  build_and_serve.sh  index.html  style.css
.github/workflows/: deploy.yml
pkg/: README.md  norwegian_tax_calculator.js  norwegian_tax_calculator_bg.wasm  package.json
src/: lib.rs  tax_calculator.rs
src/components/: input_components.rs  mod.rs  result_components.rs  tax_calculator_component.rs
